--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,7 +23,7 @@
       "moduleResolution": "node",
       "resolveJsonModule": true
     },
-    "include": ["src/**/*.ts", "src/**/*.tsx", "vite.config.*"],
+    "include": ["vite-env.d.ts", "src/**/*.ts", "src/**/*.tsx", "vite.config.*"],
     "exclude": ["node_modules"]
   }
   
